--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watch"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "acorn": "^8.0.1",
-    "monaco-editor": "^0.20.0"
+    "monaco-editor": "^0.20.0",
+    "serve": "^11.3.2"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
   }
 }
