--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "acorn": "^8.0.1",
+    "jest": "^26.6.3",
     "monaco-editor": "^0.20.0",
     "serve": "^11.3.2"
   },
   "devDependencies": {
-    "jest": "^26.6.3"
+    "@babel/preset-env": "^7.12.1",
+    "babel-jest": "^26.6.3"
   }
 }
