--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "acorn": "^8.0.1",
+    "acorn": "^8.0.4",
     "jest": "^26.6.3",
     "monaco-editor": "^0.20.0",
+    "recast": "^0.20.4",
     "serve": "^11.3.2"
   },
   "devDependencies": {
